Bug 62659 - CRASH - Template Manager dumps core on closing after browsing templates
Summary: CRASH - Template Manager dumps core on closing after browsing templates
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: x86 (IA32) Linux (All)
: high blocker
Assignee: Cédric Bosdonnat
URL:
Whiteboard: target:4.1.0 target:4.0.3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-03-23 08:05 UTC by Alex Thurgood
Modified: 2013-04-08 20:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
java vm trace log (91.36 KB, text/plain)
2013-03-23 08:07 UTC, Alex Thurgood
Details
gdb trace (37.10 KB, text/plain)
2013-03-23 08:19 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2013-03-23 08:05:29 UTC
On 32bit Linux build from master :

Version 4.1.0.0.alpha0+ (Build ID: edf57013463eff6d3b40d8d5d933577f0e6cf8e)

LO dumps core systematically, when closing the Template Manager by clicking on the window close button, after having browsed through templates.

How to reproduce :

1) Start LO
2) File > New > Templates
3) The Template Manager is displayed.
4) Click on one of the Template tabs (e.g. Presentations, Documents, etc)
5) Double-click on a subcategory of templates.
6) Single Click on any template, then navigate up and down the collection with either the mouse or the up/down arrow keys.
7) Click on the "Close" button of the Template Manager window.
8) Crash

What should happen :
Window should close the Template Manager window gracefully and return user to any LO open windows (by default this is a blank Writer document).

Regression over stable production release.
Enclosing output of console, core dump and hs_error log.

Alex
Comment 1 Alex Thurgood 2013-03-23 08:07:03 UTC
Created attachment 76926 [details]
java vm trace log
Comment 2 Alex Thurgood 2013-03-23 08:07:48 UTC
Console output :

#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0x01a2694d, pid=28431, tid=3059402880
#
# JRE version: 7.0_15-b20
# Java VM: OpenJDK Client VM (23.7-b01 mixed mode, sharing linux-x86 )
# Problematic frame:
# C  [libvcllo.so+0x2df94d]  ToolBox::GetItemPos(unsigned short) const+0x11
#
# Core dump written. Default location: /home/Development/libo/core/core or core.28431
#
# An error report file with more information is saved as:
# /home/Development/libo/core/hs_err_pid28431.log
#
# If you would like to submit a bug report, please include
# instructions on how to reproduce the bug and visit:
#   https://bugs.launchpad.net/ubuntu/+source/openjdk-7/
#

[error occurred during error reporting , id 0xb]
Comment 3 Alex Thurgood 2013-03-23 08:09:23 UTC
Core dump :

https://dl.dropbox.com/u/107086405/core
Comment 4 Alex Thurgood 2013-03-23 08:19:12 UTC
Created attachment 76927 [details]
gdb trace

gdb output enclosed
Comment 5 Alex Thurgood 2013-03-23 08:21:07 UTC
Note that the crash doesn't occur if the user goes via the StartCenter.

Alex
Comment 6 Jean-Baptiste Faure 2013-03-23 09:45:51 UTC
Reproducible for me under Ubuntu 12.04 x86-64 with master (Build ID: 97edb75d08e35eb014037fa6a4f93eeb16e1127) and LibreOffice 4.0.3.0+  (Build ID: 9296cf4088a0637f0326803fe220816ebc8daf2). 
Even if I launch the Template Manager from the StartCenter, when I close it  LibreOffice exit. It is not clear for me if it is a crash because I do not get any error message in the terminal as for a normal exit.

Best regards. JBF
Comment 7 Alex Thurgood 2013-03-24 09:22:02 UTC
(In reply to comment #6)
> Reproducible for me under Ubuntu 12.04 x86-64 with master (Build ID:
> 97edb75d08e35eb014037fa6a4f93eeb16e1127) and LibreOffice 4.0.3.0+  (Build
> ID: 9296cf4088a0637f0326803fe220816ebc8daf2). 
> Even if I launch the Template Manager from the StartCenter, when I close it 
> LibreOffice exit. It is not clear for me if it is a crash because I do not
> get any error message in the terminal as for a normal exit.
> 
> Best regards. JBF

Hi Jean-Baptiste,

I see the same as you on Linux Mint 13 KDE edition. The whole app just shuts down, no error messages in konsole (perhaps in my case, that has something to do with KDE integration of LO, or rather, the lack of it). I get no core output or hs_err_pid.log either on Linux Mint 13 KDE.

Alex
Comment 8 Cédric Bosdonnat 2013-03-25 15:25:59 UTC
I am reproducing it. Started investigating on it.
Comment 9 Commit Notification 2013-03-25 17:26:39 UTC
Cedric Bosdonnat committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8a3582d4cbcf6a705f724b921e370c739ecee35

fdo#62659: only select items in ThumbnailView on TabStop



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Cédric Bosdonnat 2013-03-25 17:27:27 UTC
Fixed in master, commit pending review for libreoffice-4-0
Comment 11 Jean-Baptiste Faure 2013-03-26 05:42:54 UTC
Verified on master Version 4.1.0.0.alpha0+ .0.0.alpha0 (Build ID: b5d30295cbfc2a0131942cd7706c65d08ebe893) under Ubuntu 12.04 x86-64. No crash anymore for me. 

Thank you Cédric for the quick fix. :-)

Best regards. JBF
Comment 12 Commit Notification 2013-03-26 08:54:07 UTC
Cedric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=edc8b07e5f69413b3710ddf192a84a862b0e17af&h=libreoffice-4-0

fdo#62659: only select items in ThumbnailView on TabStop


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Jean-Baptiste Faure 2013-04-08 20:09:58 UTC
Verified in Version 4.0.3.0+ (Build ID: cc42de5dccf4f284e479ab3c9ab81b8b114a2d8) too.

Thank you very much.
JBF