fdo#62659: only select items in ThumbnailView on TabStop

Change-Id: I024df8520f0daf2cc2e9e5f041e1ff18cb3689ec